fix: added image picker and splitted code

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -47,5 +47,9 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>We need to access gallery</string>
+	<key>NSCameraUsageDescription</key>
+	<string>We need to access camera</string>
 </dict>
 </plist>
