--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   flutter_secure_storage: ^6.0.0
   http: ^0.13.5
+  image_picker: ^0.8.6
 
 dev_dependencies:
   flutter_lints: ^2.0.0
